# geometry_reader

./: CMakeLists.txt  README.md
cmake/: GetCMakeMM.cmake
libs/: CMakeLists.txt
libs/include/: GeometryReader.h
libs/src/: GeometryReader.cc
